posts/static/index.css
/* http://meyerweb.com/eric/tools/css/reset/
v2.0 | 20110126
License: none (public domain)
 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
*, *:before,  *:after {
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
}

body {
  font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
  color: #444;

  --post-image-width: 100%;
}

.Chrome {
  max-width: 9in;
  margin: 0 auto;
  margin-bottom: 2rem;

  display: flex;
  flex-direction: row;
}
.Chrome_right {
  flex: 1 1 auto;
  text-align: right;
}

.Content {
  max-width: 9in;
  margin: 0 auto;

  margin-bottom: 2rem;
}

.PostDetailPage {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  margin-bottom: 2rem;
}
.PostDetailPage_inner {
  display: inline-block;
}
.PostDetailPage .PostDetailPage_poster {
  object-fit: none;
}
.PostDetailPage img,
.PostDetailPage p {
  margin-bottom: 1rem;
}

a  {
  color: #000;
  text-decoration: underline #777;
}

.Preview {
  max-height: 50vh;
  max-width: var(--post-image-width);
  display: block;
  margin: 0 auto;
  transition: transform 1s, opacity 1s;

  position: relative;
  z-index: 0;
}
.Preview__out {
  transform: translateY(20%);
  opacity: 0;
}
.Preview__in {
  transform: translateY(0);
  opacity: 1;
}

.Scanner {
  --scanner-is-on:0;
  --scanner-progress:0;
  --scanner-padding: 1em;

  position: relative;
}
.Scanner_beam {
  position: absolute;
  top: 0;
  width: 100%;

  background-color: black;
  opacity: 0.5;

  height: calc(100% - var(--scanner-progress));
  z-index: 1;
}

.Button {
  cursor: pointer;
  border: 2px solid #333;
  border-radius: 4px;
  padding: 1em;
  display: block;
  width: 100%;
  text-align: center;

  appearance: none;
  background: transparent;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
.Button[disabled] {
  cursor: default;
  border-color: grey;
  color: grey;
}

.ImagePlaceholder {
  height: 50vh;
  width: var(--post-image-width);

  font-size: 3rem;

  display: flex;
  justify-content: center;
  align-items: center;
}


.PostList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
@media(min-width: 10in) {
  .PostList {
    max-width: 9in;
    margin: 0 auto;
  }
}
@media(max-width: 10in) {
  .PostList {
    max-width: 4in;
    margin: 0 auto;
  }
}
.PostList .PostList_item {
  overflow: hidden;
}
@media(min-width: 10in) {
  .PostList .PostList_item {
    width: 2in;
    height: 3.2in;
    margin: 0.5in;
  }
}
@media(max-width: 10in) {
  .PostList .PostList_item {
    margin: 0.5in 0;
  }
}

.PostList .PostList_item a {
  display: block;
}
.PostList .PostList_item img {
  max-width: 100%;
}

.StatusBar {
  height: 1rem;
  width: 100%;
}

.Form .Form_label {
  font-weight: bold;
  display: block;
}

.Form .Form_inputDescription {
  display: block;
  opacity: 0.5;
}

.Form .Form_textarea {
  width: 100%;
}

.Form_labelledInput {
  margin-bottom: 1rem;
  display: block;
}
.Form_labelledInput > input + .Form_inputErrorMessage {
  display: none;
}
.Form_labelledInput > input:invalid + .Form_inputErrorMessage {
  display: block;
  color: darkred;
}

.mb {
  margin-bottom: 1em;
}

.hidden {
  display: none;
  visibility: hidden;
}

.flex {
  display: flex;
}

.flexColumn {
  flex-direction: column;
}

.flexCenter {
  justify-content: center;
  align-items: center;
}

.flexChildGrow {
  flex-grow: 1;
}

.offsetParent {
  position: relative;
}

.fullHeight, .fullWidth {
  position: absolute;
}

.fullHeight {
  height: 100%;
}

.fullWidth {
  width: 100%;
}

